@@ -1,3 +1,8 @@
+*Edge*
+
+* HTTP proxy support.  #2133 [Marshall Huss, Sébastien Dabet]
+
+
 *2.3.2 [Final] (March 15, 2009)*
 
 * Nothing new, just included in 2.3.2
